k8s/deployment-pvt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-k8s-pvt
  name: go-k8s-pvt
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-k8s-pvt
  template:
    metadata:
      labels:
        app: go-k8s-pvt
    spec:
      containers:
      - image: sumitpantheon/go-k8s
        imagePullPolicy: Always
        name: go-k8s
      # regcred is the kubectl secret name which is used to pull the image from the private registry
      #   kubectl create secret docker-registry regcred 
      #       --docker-username=sumitpantheon 
      #       --docker-password=token-generated-at-dockerhub
      #       --docker-email=reg-email-address@gmail.com
      # https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
      imagePullSecrets:
      - name: regcred
