k8s/goapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-k8s

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-k8s
  namespace: go-k8s
  labels:
    app: go-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-k8s
  template:
    metadata:
      labels:
        app: go-k8s
    spec:
      containers:
      - image: iamsumit/go-k8s:v1
        name: go-k8s
        livenessProbe:
          httpGet:
            path: /hello
            port: 8080
          initialDelaySeconds: 30
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
        # Allocate limited resources to the container
        resources:
            limits:
              cpu: '500m'
              memory: '512Mi'
            requests:
              cpu: '250m'
              memory: '256Mi'

---
apiVersion: v1
kind: Service
metadata:
  name: go-k8s
  namespace: go-k8s
  labels:
    app: go-k8s
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-k8s
  type: NodePort
