k8s/goapp-ingress-cert.yaml
# kubectl apply -f https://github.com/jetstack/cert-manager/releases/download/v1.5.4/cert-manager.crds.yaml
# kubectl create namespace cert-manager
# kubectl apply -f https://github.com/jetstack/cert-manager/releases/download/v1.5.4/cert-manager.yaml
---
# https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-k8s-ingress
  namespace: go-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: go-k8s-ci
spec:
  tls:
    - hosts:
        - go-k8s.local
      secretName: gok8s-selfsigned-cs
      # secretName: go-k8s-openssl
  rules:
    - host: go-k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-k8s
                port:
                  number: 8080
